# block-stacker

./: .gitignore  CHANGELOG.md  Cargo.toml  Cold Clear.mhtml  Dockerfile  Jstris-v1.40.1.htm  README.md  Stacker3-18-2023_21-15-08.html  TODO.md  build.sh  client.wasm  index.html  release.sh  run.sh  tetris.wasm  web.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: actions.yml  build.yml  deploy.yml
Jstris_files/: app.js  game.js  main.css  replayer.js
client/: Cargo.toml
client/src/: drawer.rs  game.rs  input.rs  main.rs  settings.rs
notes/: ROTATION.md  WALLKICK.md
resources/: deobfuscated-2023-11-08T02_04_39.388Z.js  deobfuscated-2023-11-08T02_04_39.388Z.js.info
resources/blox.askplays.com/blox.askplays.com/: index.html  manifest.json  service-worker.js  style.css
resources/blox.askplays.com/blox.askplays.com/css/: game.css
resources/blox.askplays.com/blox.askplays.com/js/: basic.js  block.js  computer.js  layout.js  libgif.js  opener.js  piece.js  replay.js  rubbable.js
resources/ddrkirby.com/ddrkirby.com/: 4-Wide Trainer.html
resources/ddrkirby.com/ddrkirby.com/4-Wide Trainer_files/: bundle.js.download  bundle.js.download.info
scripts/wallkick_imgs/: index.js
scripts/wallkicks/: index.js  input.txt  package.json  page.html
src/: board.rs  bricks.rs  consts.rs  drawer.rs  game.rs  generator.rs  history.rs  input.rs  lib.rs  main.rs  mod.rs  movement.rs  piece.rs  settings.rs  ui.rs  utils.rs
src/bot/: cold_clear.rs  mod.rs
src/core/: action.rs  board.rs  consts.rs  generator.rs  mod.rs
src/core/logic/: board.rs  mod.rs  score.rs  utils.rs
src/extensions/: history.rs
src/tetris/: action.rs  board.rs  consts.rs  drawer.rs  generator.rs  mod.rs  random.rs
tests/: wallkicks.rs
tetris/: Cargo.toml
tetris/src/: board.rs  consts.rs  drawer.rs  generator.rs  lib.rs  random.rs  utils.rs
