[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4"
# cold-clear-2 = { git = "https://github.com/MinusKelvin/cold-clear-2" }

# Can't use the following tetris bots
# https://github.com/jezevec10/MisaMinoBot
# https://github.com/mat1jaczyyy/Zetris