[package]
name = "tetris"
version = "0.1.0"
edition = "2021"
default-run = "client"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tetris"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
macroquad = "0.4"

# PC Finder
# tetra-tools = { git = "https://github.com/wirelyre/tetra-tools" }

# Play again a AI bot, rust bot
# cold-clear-2 = { git = "https://github.com/MinusKelvin/cold-clear-2" }
# claim with faster move gen https://github.com/citrus610/cold-clear-2 (better performance)

# AI bot, c# bot 
# zetris = { git = "https://github.com/mat1jaczyyy/Zetris" }
# to setup c# bot
# https://medium.com/@chyyran/calling-c-natively-from-rust-1f92c506289d, follow to setup the above repository to be able to compile c# code to native machine code
# generate c# static / shared libraries, https://learn.microsoft.com/en-us/windows/uwp/dotnet-native/getting-started-with-net-native
# https://github.com/dotnet/corert is superseded by https://github.com/dotnet/runtimelab/tree/feature/NativeAOT

# Misa-mino, c++ bot
# misa-mino = { git = "https://github.com/jezevec10/MisaMinoBot" }
# random fork, with new comments but idk what the commits are https://github.com/iclyxcly/MisaMino