[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetris = { path = "../tetris" }
macroquad ="0.3"
egui = "0.20"
egui-macroquad = { version = "0.12", git = "https://github.com/matthiascy/egui-macroquad" }
egui-bind = "0.5.2"
# quad-storage = "0.1.3"
# quad-net = "0.1.1"
# cold-clear-2 = { git = "https://github.com/MinusKelvin/cold-clear-2" }
# https://github.com/thesilican/tetris-ai
