[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetris = { path = "../tetris" }
macroquad ="0.3"
egui = "0.21"
egui-macroquad = { version = "0.12", git = "https://github.com/ziloka/egui-macroquad", rev = "81216f2b1978f3954e837c7d15c60c8a726708e0" }
egui-bind = { version = "0.5.2", git = "https://github.com/ziloka/egui-bind", rev = "01f60f2b538f8d9ef46c5e807a29e1748eaf3c2f" }
# quad-storage = "0.1.3"
# quad-net = "0.1.1"
# cold-clear-2 = { git = "https://github.com/MinusKelvin/cold-clear-2" }
# https://github.com/thesilican/tetris-ai
